# Product-Idea-Agent

./: .env.example  .gitignore  README.md  config.py  constants.py  main.py  model.py  pyproject.toml
agents/: orchestrator.py
agents/hn_agent/: __init__.py  agent.py
agents/mvp_builder_agent/: __init__.py  agent.py
agents/pm_agent/: __init__.py  agent.py
agents/reddit_agent/: __init__.py  agent.py
agents/researcher_agent/: __init__.py  agent.py
agents/scorer_agent/: __init__.py  agent.py
tools/: __init__.py  hackernews_tool.py  reddit_tool.py  storage.py
