[project]
name = "product-ideas-agent"
version = "0.1.0"
description = "AI pipeline that finds Reddit pain points and generates MVP ideas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "praw>=7.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
